# tauri-plugin-macos-fps

./: CHANGELOG.md  README.md
examples/fps-diag/src/: index.html
examples/fps-diag/src-tauri/: Cargo.toml  tauri.conf.json
examples/fps-diag/src-tauri/capabilities/: default.json
examples/fps-diag/src-tauri/src/: lib.rs  main.rs
src/: lib.rs  macos.rs
